--- a/package.json
+++ b/package.json
@@ -32,22 +32,22 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ng-toolkit/serverless": "^1.1.42",
+    "aws-serverless-express": "^3.2.0",
     "core-js": "^2.5.4",
-    "jwt-decode": "^2.2.0",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
     "cors": "~2.8.4",
     "cp-cli": "^1.1.0",
-    "aws-serverless-express": "^3.2.0"
+    "jwt-decode": "^2.2.0",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -56,14 +56,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "opencollective": "^1.0.3",
     "protractor": "~5.4.0",
+    "serverless": "1.26.1",
+    "serverless-apigw-binary": "^0.4.4",
+    "ts-loader": "4.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1",
-    "ts-loader": "4.2.0",
-    "webpack-cli": "2.1.2",
-    "opencollective": "^1.0.3",
-    "serverless": "1.26.1",
-    "serverless-apigw-binary": "^0.4.4"
+    "webpack-cli": "^2.1.5"
   }
 }
